--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h2 style="text-align: center;">音乐播放器  Hmusic.js</h2>
 		<div class="warp">
-			<div class="hmusic">
+			<!--<div class="hmusic">
 				  <audio class="hm-audio"></audio>
 				  <div class="banner">
 				    <div class="banner-zz">
@@ -45,7 +45,7 @@
 				  </div>
 				  <div class="longarr"></div>
 				  <style type="text/css" class="css"></style>
-				</div>
+				</div>-->
 		</div>
 	</body>
 	<script type="text/javascript">
