改个不同的歌

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </style>
   </head>
   <body>
-   <script src="dist/bundle.js"></script>
+   <script src="dist/hmusic.js"></script>
    <h2 style="text-align: center;">音乐播放器  Hmusic.js</h2>
 		<div class="warp"></div>
 		<div class="warp2"></div>
 	</body>
 	<script type="text/javascript">
 		hyplaylist(document.querySelector('.warp'),723657080);
-		hyplaylist(document.querySelector('.warp2'),723657080);
+		hyplaylist(document.querySelector('.warp2'),150301862);
 	</script>
 	
 	
