--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </body>
     <script type="text/javascript">
        var m1= hyplaylist(document.querySelector('.warp'),723657080);
-       var m2= hyplaylist(document.querySelector('.warp2'),150301862);
+       //var m2= hyplaylist(document.querySelector('.warp2'),150301862);
+      // var c=new Hmusic(document.querySelector('.warp'),[{yunid: 4879869, img: "https://p1.music.126.net/tciqmgtNlLSgmAA--w4iLw==/1664660604466892.jpg", lrc: "https://t5.haotown.cn/yunmusic//?type=lyric&id=4879869&br=128000", title: "チルノのパーフェクトさんすう教室-歌ってみた"},{yunid: 29717270, img: "https://p1.music.126.net/oOGKq1fBwikj9IKsTM2TgQ==/3239161255894106.jpg", lrc: "https://t5.haotown.cn/yunmusic//?type=lyric&id=29717270&br=128000", title: "with“you”－絆－"},{yunid: 29133659, img: "https://p1.music.126.net/bS9aU31YEzWptRn4dfU64w==/2534374303570373.jpg", lrc: "https://t5.haotown.cn/yunmusic//?type=lyric&id=29133659&br=128000", title: "もってけ! セーラーふく-流田Project"},{yunid: 486090212, img: "https://p1.music.126.net/aAVVrqzAHxgsyettIa2ckw==/109951162955242229.jpg", lrc: "https://t5.haotown.cn/yunmusic//?type=lyric&id=486090212&br=128000", title: "笨蛋AC娘"},{yunid: 22677573, img: "https://p1.music.126.net/xR3X82MvC7808gU1ip95cg==/754264976676294.jpg", lrc: "https://t5.haotown.cn/yunmusic//?type=lyric&id=22677573&br=128000", title: "メルト-初音ミク"}])
     </script>
     
 </body>
